test/errors/type/list/reverse.yasl
mt.lookup([], .reverse)(1)
